[package]
name = "fileslice"
description = "Slices of files"
version = "0.3.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/fileslice"

[dependencies]
bytes = { version = "1.5.0", optional = true }
parquet = { version = "46", default-features = false, optional = true }
tar = { version = "0.4.38", optional = true }

[features]
default = ["parquet", "tar"]
parquet = ["dep:parquet", "bytes"]

[dev-dependencies]
parquet = { version = "46", features = ["zstd"], default-features = false }
