[package]
name = "fileslice"
description = "Slices of files"
version = "0.4.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/fileslice"

[dependencies]
bytes = { version = "1.5.0", optional = true }
parquet = { version = "49", default-features = false, optional = true }
tar = { version = "0.4.40", optional = true }

[features]
default = ["parquet", "tar"]
parquet = ["dep:parquet", "bytes"]

[dev-dependencies]
parquet = { version = "49", features = ["zstd"], default-features = false }
