[package]
name = "fileslice"
description = "Slices of files"
version = "0.4.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/fileslice"

[dependencies]
bytes = { version = "1.6.1", optional = true }
parquet = { version = "52.1.0", default-features = false, optional = true }
tar = { version = "0.4.41", optional = true }

[features]
default = ["parquet", "tar"]
parquet = ["dep:parquet", "bytes"]
tar = ["dep:tar"]
bytes = ["dep:bytes"]

[dev-dependencies]
parquet = { version = "52.1.0", features = ["zstd"], default-features = false }
